--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<ul>
-		<li><a href = "index1.html">About me</a></li>
+		<li><a href = "index.html">About me</a></li>
 		<li><a href = "skills.html">Skill set</a></li>
 		<li><a href = "projects.html">Projects</a></li>
 		<li><a href = "handles.html">Programmer Profile</a></li>
