Updating my website

--- a/handles.html
+++ b/handles.html
@@ -3,20 +3,19 @@
 <head>
 	<meta charset = "utf-8">
 	<title>Svensevenslow - Handles</title>
+	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	<link rel = "stylesheet" href = "bar.css">
 </head>
 <body>
-	<ul>
-		<li><a href = "index.html">About me</a></li>
-		<li><a href = "skills.html">Skill set</a></li>
-		<li><a href = "projects.html">Projects</a></li>
-		<li><a href = "handles.html">Programmer Profile</a></li>
-		<li><a href = "study.html">Study Materials</a></li>
-		
-	</ul>
-	
+	<div class="topnav" id="myTopnav">
+         	<a href = "index.html">Home</a></li>
+         	<a href = "skills.html">Skill set</a></li>
+         	<a href = "handles.html">Programmer Profile</a></li>
+	<a href = "https://svensevenslow.wordpress.com/" target = "_blank">Blog</a></li>
+	</div>
+        <article>
 	<div>
-		<h2> Handles</h2>
+		<h1> Handles</h1>
 		<table>
 		<tr>
 			<th>Website</th>
@@ -24,19 +23,22 @@
 		
 		</tr>
 		<tr>
-			<th><img src="GitHub-Mark-32px.png" alt="Github-Mark">Github</th>
-			<th><a href = "https://github.com/svensevenslow">svensevenslow</a></th>
+			<th>Gitlab</th>
+			<th><a href = "https://gitlab.gnome.org/svensevenslow" target = "_blank">svensevenslow</a></th>
+		<tr>
+			<th>Github</th>
+			<th><a href = "https://github.com/svensevenslow" target = "_blank">svensevenslow</a></th>
 		</tr>
 		<tr>
 			<th>Codechef</th>
-			<th><a href = "https://www.codechef.com/users/svensevenslow">svensevenslow</a></th>
+			<th><a href = "https://www.codechef.com/users/svensevenslow" target ="_blank">svensevenslow</a></th>
 		</tr>
 		<tr>
 			<th>Codeforces</th>
-			<th><a href = "http://codeforces.com/profile/svensevenslow">svensevenslow</a></th>
+			<th><a href = "http://codeforces.com/profile/svensevenslow" target = "_blank">svensevenslow</a></th>
 		</table>
-		
 	</div>
+	</article>
 
 </body>
 </html>
