--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 <head>
 	<meta charset = "utf-8">
 	<title>Svensevenslow - Home</title>
+	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	<link rel = "stylesheet" href = "bar.css">
 	
 </head>
 <body>
-	<ul>
-		<li><a href = "index.html">About me</a></li>
-		<li><a href = "skills.html">Skill set</a></li>
-		<li><a href = "projects.html">Projects</a></li>
-		<li><a href = "handles.html">Programmer Profile</a></li>
-		<li><a href = "study.html">Study Materials</a></li>
-	</ul>
-	
-	<div>
+	<div class="topnav" id="myTopnav">
+		<a href = "index.html">Home</a></li>
+		<a href = "skills.html">Skill set</a></li>
+		<a href = "handles.html">Programmer Profile</a></li>
+	        <a href = "https://svensevenslow.wordpress.com/" target = "_blank">Blog</a></li>
+	</div>
+	<img src = "my_pic.jpg" align="left" height="400" hspace="30" vspace="30">
+	<article>
 		<h1><center>Kainaat Singh</center></h1>
 		
 		<h2>About Me </h2>
-		<p>I am currently pursuing my B.tech in Computer Science from PEC University of Technology,<br>
-		   Chandigarh.I started my engineering in August 2016, and am currently in the 2nd year of<br>
-		   my undergraduate program.
-		</p>
-	
-	</div>
-
+		Pursuing B.tech in Computer Science <br>
+	        <ol>	
+			<li> Programming Enthusiast </li>
+			<li> Violinst </li>
+			<li> Golfer </li>
+		
+		</ol>
+		Did you know I draw manga in my free time?<br>
+	</article>
 </body>
 </html>
