--- a/skills.html
+++ b/skills.html
@@ -3,62 +3,49 @@
 <head>
 	<meta charset = "utf-8">
 	<title>Svensevenslow - Skills</title>
+	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	<link rel = "stylesheet" href = "bar.css">
 </head>
 <body>
-	<ul>
-		<li><a href = "index.html">About me</a></li>
-		<li><a href = "skills.html">Skill set</a></li>
-		<li><a href = "projects.html">Projects</a></li>
-		<li><a href = "handles.html">Programmer Profile</a></li>
-		<li><a href = "study.html">Study Materials</a></li>
-	</ul>
-	
+	<div class="topnav" id="myTopnav">
+	<a href = "index.html">Home</a></li>
+	<a href = "skills.html">Skill set</a></li>
+	<a href = "handles.html">Programmer Profile</a></li>
+        <a href = "https://svensevenslow.wordpress.com/" target = "_blank">Blog</a></li>
+	</div>
+        <article>	
 	<div>
-		<h2>Skill set </h2>
+		<h1>Skill set </h1>
 		<h4>Languages</h4>
+		Skill Level: Intermediate<br>
 		<ol>
-			Well I won't say I'm an expert in these languages but I definitely can do some work in them if 
-			required
 			<li>C</li>
+			<li>C++</li>
+			<li>Bash</li>
 			<li>Java</li>
+		</ol>
+		Skill Level: Beginner<br>
+		<ol>
 			<li>Python</li>
 			<li>HTML + CSS</li>
+			<li>Rust</li>
 		</ol>
 		
 		<h4>Operating system</h4>
 		<ol>
-		
-			<li>Linux - Ubuntu</li>
-			<li> Android </li>
-			<li>Windows 10</li>
-			Although I have written Windows as well I only use it when I'm forced to.	
+			<li>Fedora</li>
+			<li> Ubuntu</li>
 		</ol>
 		
 		<h4>IDE</h4>
 		<ol>
-			<li> Eclipse</li>
 			<li> Android Studio </li>
 		</ol>
 		<h4>Text Editors</h4>
 		<ol>
-			<li>Gedit - what I like using.</li>
-			<li>Nano - what I use when I want to work from the terminal.</li>
-			<li>Vim - what I use occasionally to look cool.</li>
+			<li>Vim</li>
 		</ol>
-		
-		<h4>Graphics</h4>
-		<ol>
-			I worked on my Project <a href = "projects.html">Dugeon Runner</a> which is game and used the following for editing game sprites
-			<li> Piskel</li>
-		
-		
-			I did the background designing in the following,
-			<li>MS Paint</li>
-		</ol>	
-		
-	
 	</div>
+	</article>
 
-</body>
 </html>
