--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#skills" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw w3-margin-right"></i>Technical Skills</a> 
             <a href="#experience" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Experience</a>
             <a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-wrench fa-fw w3-margin-right"></i>Projects</a>
-	    <a href="resume.pdf" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-archive fa-fw w3-margin-right"></i>Résumé</a>
+            <a href="resume.pdf" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-archive fa-fw w3-margin-right"></i>Résumé</a>
          </div>
          <div class="w3-panel w3-large">
             <a href="https://github.com/svensevenslow" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-padding "><i class="fa fa-github-square w3-hover-opacity"></i></a>
@@ -34,12 +34,18 @@
             <a href="https://in.linkedin.com/in/kainaat-singh-377068141" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-padding "><i class="fa fa-linkedin w3-hover-opacity"></i></a> 	
          </div>
       </nav>
+      <!-- Overlay effect when opening sidebar on small screens -->
+      <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
       <div class="w3-main" style="margin-left:300px">
       <div class="w3-container w3-padding-large" style="margin-bottom:32px">
-         <header id="about">
+      <header id="about">
+      <a href="#"><img src="my_photo.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
+      <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+      <div class="w3-container">
          <h4><b>About</b></h4>
          <p>Currently I'm pursuing my Bachelor's in Computer Science and Engineering. I am always eager to try out new technologies. 
-	Difficult challenges pique my interest. Tougher tasks always provide me with a better learning experience.</p>
+            Difficult challenges pique my interest. Tougher tasks always provide me with a better learning experience.
+         </p>
          <hr>
          <header id = "skills">
          <h4><b>Technical Skills</b></h4>
@@ -183,5 +189,17 @@
             </div>
          </div>
       </div>
+      <script>
+         // Script to open and close sidebar
+         function w3_open() {
+             document.getElementById("mySidebar").style.display = "block";
+             document.getElementById("myOverlay").style.display = "block";
+         }
+          
+         function w3_close() {
+             document.getElementById("mySidebar").style.display = "none";
+             document.getElementById("myOverlay").style.display = "none";
+         }
+      </script>
    </body>
 </html>
